...
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/settings_view_margin">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_marginBottom="@dimen/settings_row_margin"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/label_picture"
                        android:scaleType="centerCrop"
...

                                <TextView
                                    android:id="@+id/settings_label_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:lineSpacingExtra="@dimen/settings_tv_lineheight"
                                    android:text="@string/settings_name"
                                    android:textSize="@dimen/settings_tv_textsize" />

                            <EditText
                                android:id="@+id/settings_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/settings_label_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:lineSpacingExtra="@dimen/settings_tv_lineheight"
                                android:text="@string/settings_email"
                                android:textSize="@dimen/settings_tv_textsize" />

                            <EditText
                                android:id="@+id/settings_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
                                android:layout_marginLeft="@dimen/settings_tv_input_margin"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <Spinner
                                    android:id="@+id/settings_gender_spinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:dropDownWidth="match_parent"
                                    android:spinnerMode="dropdown"
                                    android:selectedItemPosition="@={user.gender}"/>

...
                                android:layout_marginLeft="@dimen/settings_tv_input_margin"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/settings_unit_of_measurement_kg"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:text="@string/settings_unit_of_measurement_kg"
                                    android:textSize="@dimen/settings_tv_textsize" />

                                <SeekBar
                                    android:id="@+id/settings_seek_measurement"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:max="1"
                                    android:progress="@={user.unit}"/>

                                <TextView
                                    android:id="@+id/settings_unit_of_measurement_lbs"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:focusable="auto"
                                    android:text="@string/settings_unit_of_measurement_lbs"
                                    android:textSize="@dimen/settings_input_textsize" />
                            </LinearLayout>
...
                                android:layout_marginLeft="@dimen/settings_tv_input_margin"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <Spinner
                                    android:id="@+id/settings_language_spinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:dropDownWidth="match_parent"
                                    android:spinnerMode="dropdown"
                                    android:selectedItemPosition="@={user.language}"/>

...
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="@dimen/settings_view_margin"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/setting_btn_save"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/settings_button_margin"
                            android:text="@string/save"
                            android:textSize="@dimen/settings_button_textsize" />
...
