...
                        android:layout_margin="@dimen/catlist_card_padding_inner"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/name_cat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{cat.name}"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="@dimen/catlist_card_textsize"
                            android:textStyle="bold" />
...
                        android:text="@string/catlist_food_recommendation"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="@dimen/catlist_card_body_textsize"
                        android:textStyle="italic" />

                    <TableLayout
                        android:id="@+id/accordion_food_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/catlist_card_padding_inner" />

                    <LinearLayout
                        android:layout_width="match_parent"
...
