...
    <string name="food_list_text_fat">Raw Fat: %.2f %%</string>
    <string name="food_list_text_ash">Crude Ash: %.2f %%</string>
    <string name="food_list_text_fiber">Raw Fiber: %.2f %%</string>
    <string name="food_list_text_water">Water: %.2f %%</string>

    <!-- Add Food -->
    <string name="addFood_label_name">Name</string>
    <string name="addFood_label_protein">Raw Protein</string>
    <string name="addFood_label_fat">Raw Fat</string>
    <string name="addFood_label_ash">Crude Ash</string>
    <string name="addFood_label_fiber">Raw Fiber</string>
    <string name="addFood_label_water">Water</string>

...
    <string name="error_percentage_food">The filled percentages exceed 100%. Please change the input.</string>

    <!-- Add cat -->
    <string name="add_cat">Add Cat</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="label_name">Name</string>
    <string name="label_race">Race</string>
    <string name="label_dob">D.o.b.</string>
    <string name="btn_dob">Pick Date</string>
    <string name="label_size">Size</string>
    <string name="label_weight">Weight</string>
    <string name="label_gender">Gender</string>
...
